# ROS

devel/: setup.sh
devel/lib/miRobot/: miRobot_node
devel/lib/pkgconfig/: miRobot.pc
devel/share/miRobot/cmake/: miRobotConfig.cmake
src/miRobot/: CMakeLists.txt  CMakeLists.txt~  miRobotNode.launch  package.xml  package.xml~
src/miRobot/src/: miRobot_node.cpp  miRobot_node.cpp~
